--- a/baja.ipynb
+++ b/baja.ipynb
@@ -22,7 +22,12 @@
     "    file = Path(dataset)\n",
     "    df = pd.read_csv(file,sep=',',encoding='utf_8',encoding_errors='ignore',skiprows=10)\n",
     "    df = df.drop(0,axis=0)\n",
-    "    df_drop = df.drop(labels=['PPS','gpsTime','numSVsTracked','gpsPosMode','gpsVelMode','gpsOrientMode','HDOP','PDOP'],axis=1)\n",
+    "    df_drop = df.drop(labels=['PPS','gpsTime','numSVsTracked','gpsPosMode','gpsVelMode',\n",
+    "                              'gpsOrientMode','HDOP','PDOP','engineSpeed','altitude','vNorth','vEast','vUp','vxCG','vyCG','vzCG',\n",
+    "                              'rollRate','pitchRate','yawRate','posAccuracy_north','posAccuracy_east','posAccuracy_down',\t\n",
+    "                              'velAccuracy_north','velAccuracy_east','velAccuracy_down','orientAccuracy_heading','orientAccuracy_pitch',\n",
+    "                              'orientAccuracy_roll','chassisAccelFL','chassisAccelFR','chassisAccelRL','chassisAccelRR'\t,\n",
+    "                              'deflectionFL','deflectionFR','deflectionRR','wheelAccelFL','wheelAccelFR','wheelAccelRL','wheelAccelRR'],axis=1)\n",
     "    df_drop['time'] = df_drop['time'].astype(float).round(3)\n",
     "    df_drop['horizontalSpeed'] = df_drop['horizontalSpeed'].astype(float)\n",
     "    df_clean =  df_drop.drop(df_drop[df_drop.horizontalSpeed < 0.5].index)\n",
