--- a/baja3.ipynb
+++ b/baja3.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "df_temp1 = df_main[df_main['session'] == 1]#.unique()\n",
-    "df_temp1 = df_temp[df_temp['outing'] == 1]\n",
+    "df_temp1 = df_temp1[df_temp1['outing'] == 1]\n",
     "df_temp1\n",
     "df_temp1['lap'].unique()"
    ]
