--- a/baja4.ipynb
+++ b/baja4.ipynb
@@ -38,30 +38,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "regions = df_main['CLASS'].unique()\n",
+    "regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dis import dis\n",
     "from numpy import NaN\n",
     "\n",
     "dist_time = pd.DataFrame()\n",
     "\n",
     "dist_time['lap'] = NaN\n",
-    "dist_time['min_dist'] = NaN\n",
-    "dist_time['max_dist'] = NaN\n",
-    "dist_time['min_time'] = NaN\n",
-    "dist_time['max_time'] = NaN\n",
     "dist_time['total_distance'] = NaN\n",
     "dist_time['total_time'] = NaN\n",
-    "\n",
+    "dist_time['max_speed'] = NaN\n",
+    "dist_time['min_speed'] = NaN\n",
+    "dist_time['average_speed'] = NaN\n",
     "\n",
     "for i in range(len(laps)):\n",
     "    df_temp = df_main[df_main['lap'] == laps[i]]\n",
-    "    dist_time.at[i,'lap'] = laps[i]\n",
-    "    dist_time.at[i,'min_dist'] = df_temp['distance'].min()\n",
-    "    dist_time.at[i,'max_dist'] = df_temp['distance'].max()\n",
-    "    dist_time.at[i,'min_time'] = df_temp['time'].min()\n",
-    "    dist_time.at[i,'max_time'] = df_temp['time'].max()\n",
+    "    dist_time.at[i,'lap'] = str(laps[i])\n",
+    "    # dist_time.at[i,'min_dist'] = df_temp['distance'].min()\n",
+    "    # dist_time.at[i,'max_dist'] = df_temp['distance'].max()\n",
+    "    # dist_time.at[i,'min_time'] = df_temp['time'].min()\n",
+    "    # dist_time.at[i,'max_time'] = df_temp['time'].max()\n",
     "    dist_time.at[i,'total_distance'] = df_temp['distance'].max() - df_temp['distance'].min()\n",
     "    dist_time.at[i,'total_time'] = df_temp['time'].max() - df_temp['time'].min()\n",
-    "    \n",
+    "    dist_time.at[i,'max_speed'] = df_temp['horizontalSpeed'].max()\n",
+    "    dist_time.at[i,'min_speed'] = df_temp['horizontalSpeed'].min()\n",
+    "    dist_time.at[i,'average_speed'] = df_temp['horizontalSpeed'].mean()\n",
+    "    for region in regions:\n",
+    "        df_temp1 = df_temp[df_temp['CLASS'] == region]\n",
+    "        string1= str(region)+'_max_speed'\n",
+    "        string2= str(region)+'_min_speed'\n",
+    "        string3= str(region)+'_avg_speed'\n",
+    "        string4= str(region)+'_distance'\n",
+    "        string5= str(region)+'_time'\n",
+    "        dist_time.at[i,string1] = df_temp1['horizontalSpeed'].max()\n",
+    "        dist_time.at[i,string2] = df_temp1['horizontalSpeed'].min()\n",
+    "        dist_time.at[i,string3] = df_temp1['horizontalSpeed'].mean()   \n",
+    "        dist_time.at[i,string4] = df_temp1['distance'].max() - df_temp1['distance'].min()\n",
+    "        dist_time.at[i,string5] = df_temp1['time'].max() - df_temp1['time'].min()\n",
+    "        \n",
     "dist_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = dist_time.corr()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df.loc[['total_distance','total_time','average_speed']]\n",
+    "df2   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "plt.subplots(figsize=(20,5))\n",
+    "sns.heatmap(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_time.to_csv('teste5.csv')"
    ]
   }
  ],
