--- a/baja3.ipynb
+++ b/baja3.ipynb
@@ -160,13 +160,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_main.to_csv('teste4.csv')"
+    "df_main.to_csv('teste4-1.csv',sep=';')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -180,12 +180,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "258ecc3f114409d41cc595c4e29ef19f10ac7c155335d8702fbf20a0e9443e1e"
    }
   }
  },
