--- a/baja4.ipynb
+++ b/baja4.ipynb
@@ -48,7 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dis import dis\n",
     "from numpy import NaN\n",
     "\n",
     "dist_time = pd.DataFrame()\n",
@@ -134,11 +133,36 @@
    "source": [
     "dist_time.to_csv('teste5.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp1 = df_main[df_main['lap'] == 4]\n",
+    "df_temp2 = df_main[df_main['lap'] == 11]\n",
+    "\n",
+    "df_main2 = pd.merge(df_temp1,df_temp2,how=\"outer\")\n",
+    "df_main2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10 , 36))\n",
+    "plt.scatter(df_main2['longitude'],df_main2['latitude'],s=0.05, c=df_main2['lap'])\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -152,12 +176,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "258ecc3f114409d41cc595c4e29ef19f10ac7c155335d8702fbf20a0e9443e1e"
    }
   }
  },
